# reflection

./: .gitignore  license.txt  readme.md
doc/: competitors.md  index.html  list.html  property.html  structure.html  todo.txt
doc/gv/: property.gv  serialization.bat  serialization.gv  serialization_property.gv  serialization_structure.gv  void.gv
example/: CMakeLists.txt  assign.cpp  free.cpp  from_existing.cpp  hello  hello.cpp  json.cpp  make.bat  make.sh  makeVS2015.bat  makeVS2017.bat  makeVS2019.bat  makeVS2022.bat  make_all.sh  make_cmake.bat  make_cmake.sh  member_big.cpp  member_direct.cpp  member_function.cpp  member_guarded.cpp  member_inspect.cpp  member_mutate.cpp  member_reset.cpp  member_variable.cpp  observe_simple.cpp  readme.cpp  readme.md  run.sh  run_all.sh  wb-big.cpp  wb-small.cpp  workbench.cpp  workbench.i.cpp  xml.cpp
example/less-than-1k/: CMakeLists.txt  readme.md
example/less-than-2k/: CMakeLists.txt  make.bat  make.sh  readme.md  run.sh
example/less-than-2k/big/: CMakeLists.txt  make.sh  run.sh
example/less-than-2k/direct/: CMakeLists.txt  common.cpp  common.txt  field.cpp  make.bat  make.sh  member.cpp  pointer.cpp  run.sh  simple.cpp
example/less-than-2k/enum/: CMakeLists.txt  free.cpp  make.bat  make.sh  member.cpp  run.sh
example/less-than-2k/exposed/: CMakeLists.txt  common.cpp  field.cpp  make.sh  member.cpp  run.sh  simple.cpp
example/less-than-2k/function/: CMakeLists.txt  free0.cpp  free1.cpp  free2.cpp  free3.cpp  free4.cpp  make.bat  make.sh  member0.cpp  member1.cpp  member2.cpp  member3.cpp  member4.cpp  run.sh  static0.cpp  static1.cpp  static2.cpp  static3.cpp  static4.cpp
example/less-than-2k/guarded/: CMakeLists.txt  common.cpp  field.cpp  member.cpp  simple.cpp
example/less-than-2k/inspect/: CMakeLists.txt  common.cpp  field.cpp  make.sh  member.cpp  run.sh  simple.cpp
example/less-than-2k/mutate/: CMakeLists.txt  common.cpp  field.cpp  make.sh  member.cpp  run.sh  simple.cpp
example/less-than-2k/reset/: CMakeLists.txt  make.bat  make.sh  member.cpp  run.sh
example/less-than-2k/trinity/: CMakeLists.txt  common.cpp  field.cpp  make.bat  make.sh  member.cpp  run.sh  simple.cpp
example/less-than-2k/variable/: CMakeLists.txt  common.cpp  field.cpp  make.bat  member.cpp  run.sh  simple.cpp
example/less-than-3k/: CMakeLists.txt  make.bat  make.sh  readme.md  run.sh
example/less-than-3k/operation/: CMakeLists.txt  cpp.cpp  json.cpp  make.bat  make.sh  protobuf.cpp  run.sh  xml.cpp  yaml.cpp
example/less-than-3k/storage/: CMakeLists.txt  inherit.cpp  make.bat  make.sh  member.cpp  pointer.cpp  run.sh  view.cpp
example/less-than-3k/trinity/: make.sh  member.cpp
example/less-than-4k/: CMakeLists.txt  make.bat  make.sh  readme.md  run.sh
example/less-than-4k/base/: CMakeLists.txt  direct.cpp  exposed.cpp  guarded.cpp  inspect.cpp  make.bat  make.sh  mutate.cpp  run.sh  trinity.cpp  variable.cpp
example/less-than-4k/exposed/: CMakeLists.txt  make.sh  member.cpp  run.sh
example/less-than-4k/friend/: CMakeLists.txt  friend.cpp  make.bat  make.sh  run.sh
example/less-than-4k/function/: CMakeLists.txt  free0.cpp  free1.cpp  free2.cpp  free3.cpp  free4.cpp  free5.cpp  make.bat  make.sh  member0.cpp  member1.cpp  member2.cpp  member3.cpp  member4.cpp  member5.cpp  run.sh  static1.cpp  static2.cpp  static3.cpp  static4.cpp  static5.cpp
example/less-than-4k/idspec/: CMakeLists.txt  make.bat  member.cpp  run.sh
example/less-than-4k/operation/: CMakeLists.txt  assign.cpp  factory.cpp  make.bat  make.sh  run.sh
example/less-than-4k/operation/cpp/: CMakeLists.txt  intorspect.cpp  introspect.cpp  make.bat  make.sh  print.cpp  run.sh  serialize.cpp
example/less-than-4k/operation/ini/: CMakeLists.txt  introspect.cpp  print.cpp  serialize.cpp
example/less-than-4k/operation/java/: CMakeLists.txt  intorspect.cpp  introspect.cpp  make.bat  make.sh  run.sh
example/less-than-4k/operation/json/: CMakeLists.txt  introspect.cpp  make.sh  print.cpp  serialize.cpp
example/less-than-4k/operation/lua/: CMakeLists.txt  make.bat  print.cpp  run.sh
example/less-than-4k/operation/protobuf/: CMakeLists.txt  print.cpp
example/less-than-4k/operation/python/: CMakeLists.txt  bind.cpp  make.bat  make.sh  print.cpp  run.sh
example/less-than-4k/operation/xml/: CMakeLists.txt  intorspect.cpp  introspect.cpp  make.sh  print.cpp  run.sh  serialize.cpp
example/less-than-4k/operation/yaml/: CMakeLists.txt  introspect.cpp  make.bat  make.sh  print.cpp  serialize.cpp
example/less-than-4k/store/: CMakeLists.txt  inherit.cpp  make.sh  member.cpp  pointer.cpp  run.sh  view.cpp
example/less-than-4k/trinity/: CMakeLists.txt  member.cpp  run.sh
example/less-than-4k/typedef/: CMakeLists.txt  free.cpp  make.sh  member.cpp  run.sh  static.cpp
example/less-than-Nk/: CMakeLists.txt  contractor.cpp  make.bat  make.sh  misc.cpp  observe.cpp  parser.cpp  readme.md  run.sh
example/test/: ClassDiagram.cd  SConscript  reflection.cbp  reflection.layout  reflection2013.vcxproj  reflection2013.vcxproj.filters
example/test/cb/: reflection.cbp  reflection.layout
example/test/msvc/2013/: reflection2013.sln  reflection2013.vcxproj  reflection2013.vcxproj.filters
example/test/msvc/2015/: ClassDiagram.cd  python2015.vcxproj  python2015.vcxproj.filters  reflection2015.sln  reflection2015.vcxproj  reflection2015.vcxproj.filters
example/test/msvc/2017/: reflection2017.sln  reflection2017.vcxproj  reflection2017.vcxproj.filters
example/test/msvc/2022/: reflection2022.sln  reflection2022.vcxproj  reflection2022.vcxproj.filters
src/reflection/: object.hpp  reflection.body.hpp  reflection.hpp
src/reflection/archive/: archive.hpp  brawl.hpp  collector.hpp  genealogy.hpp  schema.hpp
src/reflection/content/: _base.hpp  _pure.hpp  category.hpp  class.hpp  composition.hpp  content.hpp  distinctive.hpp  null.hpp  void.hpp
src/reflection/define/: _begin.hpp  _end.hpp  base.hpp  constructor.hpp  define.hpp  direct.hpp  enum.hpp  exposed.hpp  function.hpp  guarded.hpp  idspec.hpp  inspect.hpp  mutate.hpp  null.hpp  reset.hpp  trinity.hpp  (+2 more)
(+408 files in other folders)
