#cmake_minimum_required(VERSION 2.8)

add_subdirectory( base      )
add_subdirectory( exposed   )
add_subdirectory( friend    )
add_subdirectory( function  )
add_subdirectory( idspec    )
add_subdirectory( operation )
add_subdirectory( store     )
add_subdirectory( trinity   )
add_subdirectory( typedef   )

