#cmake_minimum_required(VERSION 2.8)

add_executable( Reflection__LessT2K__direct__common     common.cpp   )
add_executable( Reflection__LessT2K__direct__field      field.cpp    )
add_executable( Reflection__LessT2K__direct__member     member.cpp   )
add_executable( Reflection__LessT2K__direct__pointer    pointer.cpp  )
add_executable( Reflection__LessT2K__direct__simple     simple.cpp   )
