#cmake_minimum_required(VERSION 2.8)
  
add_executable( Reflection__LessT2K__function__free0     free0.cpp   )
add_executable( Reflection__LessT2K__function__free1     free1.cpp   )
add_executable( Reflection__LessT2K__function__free2     free2.cpp   )
add_executable( Reflection__LessT2K__function__free3     free3.cpp   )
add_executable( Reflection__LessT2K__function__free4     free4.cpp   )
add_executable( Reflection__LessT2K__function__member0   member0.cpp )
add_executable( Reflection__LessT2K__function__member1   member1.cpp )
add_executable( Reflection__LessT2K__function__member2   member2.cpp )
add_executable( Reflection__LessT2K__function__member3   member3.cpp )
add_executable( Reflection__LessT2K__function__member4   member4.cpp )
add_executable( Reflection__LessT2K__function__static0   static0.cpp )
add_executable( Reflection__LessT2K__function__static1   static1.cpp )
add_executable( Reflection__LessT2K__function__static2   static2.cpp )
add_executable( Reflection__LessT2K__function__static3   static3.cpp )
add_executable( Reflection__LessT2K__function__static4   static4.cpp )
