#cmake_minimum_required(VERSION 2.8)

add_executable( Reflection__LessT2K__guarded__common      common.cpp )
add_executable( Reflection__LessT2K__guarded__field       field.cpp  )
add_executable( Reflection__LessT2K__guarded__member      member.cpp )
add_executable( Reflection__LessT2K__guarded__simple      simple.cpp )
