#cmake_minimum_required(VERSION 2.8)

add_executable( Reflection__LessT2K__mutate__common     common.cpp  )
add_executable( Reflection__LessT2K__mutate__field      field.cpp   )
add_executable( Reflection__LessT2K__mutate__member     member.cpp  )
add_executable( Reflection__LessT2K__mutate__simple     simple.cpp  )
