#cmake_minimum_required(VERSION 2.8)

add_executable( Reflection__LessT2K__variable__common.cpp     common.cpp )
add_executable( Reflection__LessT2K__variable__field          field.cpp  )
add_executable( Reflection__LessT2K__variable__member         member.cpp )
add_executable( Reflection__LessT2K__variable__simple         simple.cpp )
