#cmake_minimum_required(VERSION 2.8)


add_executable(   Reflection_LessT3K_operation_cpp               cpp.cpp)
add_executable(   Reflection_LessT3K_operation_json              json.cpp)
add_executable(   Reflection_LessT3K_operation_protobuf              protobuf.cpp)
add_executable(   Reflection_LessT3K_operation_xml                xml.cpp)
add_executable(   Reflection_LessT3K_operation_yaml              yaml.cpp)

