#cmake_minimum_required(VERSION 2.8)


add_executable(   Reflection__LessTK__base__direct       direct.cpp   )
add_executable(   Reflection__LessTK__base__exposed      exposed.cpp  )
add_executable(   Reflection__LessTK__base__guarded      guarded.cpp  )
add_executable(   Reflection__LessTK__base__inspect      inspect.cpp  )
add_executable(   Reflection__LessTK__base__mutate       mutate.cpp   )
add_executable(   Reflection__LessTK__base__trinity      trinity.cpp  )
add_executable(   Reflection__LessTK__base__variable     variable.cpp )























