#cmake_minimum_required(VERSION 2.8)

add_executable(   Reflection__LessT4K__function__free0   static5.cpp    )
add_executable(   Reflection__LessT4K__function__free1   static4.cpp    )
add_executable(   Reflection__LessT4K__function__free2   static3.cpp    )
add_executable(   Reflection__LessT4K__function__free3   static2.cpp    )
add_executable(   Reflection__LessT4K__function__free4   static1.cpp    )
add_executable(   Reflection__LessT4K__function__free5   member5.cpp    )
add_executable(   Reflection__LessT4K__function__member0   member4.cpp  )
add_executable(   Reflection__LessT4K__function__member1   member3.cpp  )
add_executable(   Reflection__LessT4K__function__member2   member2.cpp  )
add_executable(   Reflection__LessT4K__function__member3   member1.cpp  )
add_executable(   Reflection__LessT4K__function__member4   member0.cpp  )
add_executable(   Reflection__LessT4K__function__member5   free5.cpp    )
add_executable(   Reflection__LessT4K__function__static1   free4.cpp    )
add_executable(   Reflection__LessT4K__function__static2   free3.cpp    )
add_executable(   Reflection__LessT4K__function__static3   free2.cpp    )
add_executable(   Reflection__LessT4K__function__static4   free1.cpp    )
add_executable(   Reflection__LessT4K__function__static5   free0.cpp    )
