#cmake_minimum_required(VERSION 2.8)


add_executable(   Reflection__LessT4K__operation__ini__serialize       serialize.cpp )
add_executable(   Reflection__LessT4K__operation__ini__print               print.cpp )
add_executable(   Reflection__LessT4K__operation__ini__introspect     introspect.cpp )
 


