#cmake_minimum_required(VERSION 2.8)


add_executable(   Reflection__LessT4K__operation__json__serialize              serialize.cpp )
add_executable(   Reflection__LessT4K__operation__json__print              print.cpp )
add_executable(   Reflection__LessT4K__operation__json__introspect             introspect.cpp )
