#cmake_minimum_required(VERSION 2.8)


add_executable(   Reflection__LessT4K__operation__yaml__serialize              serialize.cpp )
add_executable(   Reflection__LessT4K__operation__yaml__print              print.cpp )
add_executable(   Reflection__LessT4K__operation__yaml__introspect              introspect.cpp )
